--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.jiangshiquan.ImageEditorPlugin",
+  "name": "com.jiangshiquan.imageeditorplugin",
   "version": "1.3.1",
   "description": "",
   "cordova": {
