--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.jiangshiquan.ImageEditorPlugin" version="1.3.1"
+<plugin id="com.jiangshiquan.ImageEditorPlugin" version="1.3.2"
  xmlns="http://apache.org/cordova/ns/plugins/1.0" 
  xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>ImageEditorPlugin</name>
@@ -14,6 +14,7 @@
 		</config-file>
 		
 		<dependency url="https://github.com/jianghat/jianghat-add-swift-support.git" id="jianghat-add-swift-support"/>
+		<dependency url="https://github.com/apache/cordova-plugin-camera.git" id="cordova-plugin-camera" />
 		
 		<podspec>
 		    <config>
