--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.jiangshiquan.ImageEditorPlugin" version="1.3.2"
+<plugin id="com.apjcorp.ImageEditorPlugin" version="1.0.0"
  xmlns="http://apache.org/cordova/ns/plugins/1.0" 
  xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>ImageEditorPlugin</name>
@@ -13,7 +13,7 @@
 			</feature>
 		</config-file>
 		
-		<dependency url="https://github.com/jianghat/jianghat-add-swift-support.git" id="jianghat-add-swift-support"/>
+		<dependency url="https://github.com/apjcorp-com/apjcorp-add-swift-support.git" id="apjcorp-add-swift-support"/>
 		<dependency url="https://github.com/apache/cordova-plugin-camera.git" id="cordova-plugin-camera" />
 		
 		<podspec>
@@ -33,7 +33,7 @@
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="ImageEditorPlugin">
-				<param name="android-package" value="com.jiangshiquan.ImageEditorPlugin.ImageEditorPlugin" />
+				<param name="android-package" value="com.apjcorp.ImageEditorPlugin.ImageEditorPlugin" />
 				</feature>
 		</config-file>
 		
